// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 contacts 1`] = `
<TouchableIOS
  highlight={true}
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "borderBottomColor": "#E6E8EC",
        "borderBottomWidth": 1,
        "paddingRight": 15,
        "paddingVertical": 30,
        "width": 750,
      }
    }
  >
    <Flex
      value={1}
    >
      <Icon
        name="surveyIcon"
        size={32}
        style={
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "textAlign": "center",
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      direction="row"
      style={
        Object {
          "borderLeftColor": "#E6E8EC",
          "borderLeftWidth": 1,
          "paddingLeft": 15,
        }
      }
      value={3.5}
    >
      <Flex
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          WINTER CONFERENCE 2018
        </MyText>
        <MyText
          accessible={true}
          align="center"
          allowFontScaling={true}
          direction="row"
          ellipsizeMode="tail"
        >
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              25 Unassigned
            </MyText>
          </MyText>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              30 Uncontacted
            </MyText>
          </MyText>
        </MyText>
      </Flex>
      <Translate(ShareSurveyMenu)
        survey={
          Object {
            "contacts_count": 0,
            "created_at": "2018-05-29T17:02:02Z",
            "id": "1",
            "title": "Winter Conference 2018",
            "unassigned_contacts_count": 25,
            "uncontacted_contacts_count": 30,
          }
        }
      />
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`render 0 unassigned 1`] = `
<TouchableIOS
  highlight={true}
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "borderBottomColor": "#E6E8EC",
        "borderBottomWidth": 1,
        "paddingRight": 15,
        "paddingVertical": 30,
        "width": 750,
      }
    }
  >
    <Flex
      value={1}
    >
      <Icon
        name="surveyIcon"
        size={32}
        style={
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "textAlign": "center",
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      direction="row"
      style={
        Object {
          "borderLeftColor": "#E6E8EC",
          "borderLeftWidth": 1,
          "paddingLeft": 15,
        }
      }
      value={3.5}
    >
      <Flex
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          WINTER CONFERENCE 2018
        </MyText>
        <MyText
          accessible={true}
          align="center"
          allowFontScaling={true}
          direction="row"
          ellipsizeMode="tail"
        >
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 13,
                },
                undefined,
              ]
            }
          >
            50 Contacts
          </MyText>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              30 Uncontacted
            </MyText>
          </MyText>
        </MyText>
      </Flex>
      <Translate(ShareSurveyMenu)
        survey={
          Object {
            "contacts_count": 50,
            "created_at": "2018-05-29T17:02:02Z",
            "id": "1",
            "title": "Winter Conference 2018",
            "unassigned_contacts_count": 0,
            "uncontacted_contacts_count": 30,
          }
        }
      />
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`render 0 unassigned and 0 uncontacted 1`] = `
<TouchableIOS
  highlight={true}
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "borderBottomColor": "#E6E8EC",
        "borderBottomWidth": 1,
        "paddingRight": 15,
        "paddingVertical": 30,
        "width": 750,
      }
    }
  >
    <Flex
      value={1}
    >
      <Icon
        name="surveyIcon"
        size={32}
        style={
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "textAlign": "center",
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      direction="row"
      style={
        Object {
          "borderLeftColor": "#E6E8EC",
          "borderLeftWidth": 1,
          "paddingLeft": 15,
        }
      }
      value={3.5}
    >
      <Flex
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          WINTER CONFERENCE 2018
        </MyText>
        <MyText
          accessible={true}
          align="center"
          allowFontScaling={true}
          direction="row"
          ellipsizeMode="tail"
        >
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 13,
                },
                undefined,
              ]
            }
          >
            50 Contacts
          </MyText>
        </MyText>
      </Flex>
      <Translate(ShareSurveyMenu)
        survey={
          Object {
            "contacts_count": 50,
            "created_at": "2018-05-29T17:02:02Z",
            "id": "1",
            "title": "Winter Conference 2018",
            "unassigned_contacts_count": 0,
            "uncontacted_contacts_count": 0,
          }
        }
      />
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`render 0 uncontacted 1`] = `
<TouchableIOS
  highlight={true}
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "borderBottomColor": "#E6E8EC",
        "borderBottomWidth": 1,
        "paddingRight": 15,
        "paddingVertical": 30,
        "width": 750,
      }
    }
  >
    <Flex
      value={1}
    >
      <Icon
        name="surveyIcon"
        size={32}
        style={
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "textAlign": "center",
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      direction="row"
      style={
        Object {
          "borderLeftColor": "#E6E8EC",
          "borderLeftWidth": 1,
          "paddingLeft": 15,
        }
      }
      value={3.5}
    >
      <Flex
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          WINTER CONFERENCE 2018
        </MyText>
        <MyText
          accessible={true}
          align="center"
          allowFontScaling={true}
          direction="row"
          ellipsizeMode="tail"
        >
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 13,
                },
                undefined,
              ]
            }
          >
            50 Contacts
          </MyText>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              25 Unassigned
            </MyText>
          </MyText>
        </MyText>
      </Flex>
      <Translate(ShareSurveyMenu)
        survey={
          Object {
            "contacts_count": 50,
            "created_at": "2018-05-29T17:02:02Z",
            "id": "1",
            "title": "Winter Conference 2018",
            "unassigned_contacts_count": 25,
            "uncontacted_contacts_count": 0,
          }
        }
      />
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`render survey 1`] = `
<TouchableIOS
  highlight={true}
  onPress={[Function]}
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "borderBottomColor": "#E6E8EC",
        "borderBottomWidth": 1,
        "paddingRight": 15,
        "paddingVertical": 30,
        "width": 750,
      }
    }
  >
    <Flex
      value={1}
    >
      <Icon
        name="surveyIcon"
        size={32}
        style={
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "textAlign": "center",
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      direction="row"
      style={
        Object {
          "borderLeftColor": "#E6E8EC",
          "borderLeftWidth": 1,
          "paddingLeft": 15,
        }
      }
      value={3.5}
    >
      <Flex
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#007398",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          WINTER CONFERENCE 2018
        </MyText>
        <MyText
          accessible={true}
          align="center"
          allowFontScaling={true}
          direction="row"
          ellipsizeMode="tail"
        >
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 13,
                },
                undefined,
              ]
            }
          >
            50 Contacts
          </MyText>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              25 Unassigned
            </MyText>
          </MyText>
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 13,
                }
              }
            >
                ·  
            </MyText>
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 13,
                  },
                  Object {
                    "color": "#FF5532",
                  },
                ]
              }
            >
              30 Uncontacted
            </MyText>
          </MyText>
        </MyText>
      </Flex>
      <Translate(ShareSurveyMenu)
        survey={
          Object {
            "contacts_count": 50,
            "created_at": "2018-05-29T17:02:02Z",
            "id": "1",
            "title": "Winter Conference 2018",
            "unassigned_contacts_count": 25,
            "uncontacted_contacts_count": 30,
          }
        }
      />
    </Flex>
  </Flex>
</TouchableIOS>
`;
